--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                    <div class="row align-items-center">
                         <div class="col-md-6">
                              <p class="h3 mt-3 mt-md-0">BEST DIGITAL AGENCY</p>
-                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque eos autem eius? Rerum quos soluta autem eius omnis. Placeat, odit.</p>
+                             <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque eos autem eius? Rerum quos soluta autem eius omnis. Placeat, odit.</p>
                              <a class="link-text text-decoration-none text-white" href="#"><img class="play-btn img-fluid" src="images/play.png" alt="">Watch Tutorials</a>
                         </div>
 
